landing/landing.css
      /* CSS for the body of the page */
/* main {
    display: flex;
    flex-wrap: wrap;
    align-items: center;
    justify-content: center;
    background-color: #0f0d13;
    width: auto;
    position: relative;
} */
/* body {
   display: flex;
    flex-wrap: wrap;
    align-items: center;
    justify-content: center;
    background-color: #0f0d13;
    width: auto;
    position: relative;
} */
* {margin: 0px;
   box-sizing:border-box;}

.hero {
   background-color: #0f0d13;
   
}
.hero-section {
    display: flex;
    flex-wrap: wrap;
    align-items: center;
    justify-content: center;
  }  
/* CSS for the H1 */
.tag-line  {
    width: auto;
    font-family: Verdana, Geneva, Tahoma, sans-serif;
    font-weight: 900;
    font-size: xx-large;
    color: white;
    text-align: center;
    align-items: center;
    justify-content: center;
    margin: 5px;
}
/* This CSS is for the images in the hero section */
.cat {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
   gap: 200px;
   }
.categories {
    width: 300px;
    height: 300px;
    border-radius: 20px;
    overflow: hidden;
    margin: 30px;
    justify-content: space-between;
 }

 .categories img {
    width: 100%;
    height: 100%;
    object-fit: cover;
    transition: transform 0.02 ease; 
 }
 .categories:hover {
   background-color: linear-gradient #A238FF;
   transform: scale(1.2);  
}
   /* This CSS targets the h3 in the description div */
 .description h2 {
   text-align: center;
   margin: 100px;
   color: white;
   font-family: Verdana, Geneva, Tahoma, sans-serif;
   font-weight: lighter;
}
    /* This CSS is for the music animation I first targeted the soundwave div and styled it by giving is a position relative 
    to the parent so I can freely move it around to my liking. Then I gave it a z-index of -1 so it goes below the images above it*/
.sound-wave {
   position: relative;
   height: 200px;
   display: flex;
   flex-direction: row;
   align-items: center;
   width: auto;
 }

 /* This CSS targets the bars in the soundwave div. I gave the bars all the necessary features to be visible, then I gave 
 it an animation with the properties I wanted  */
.bar {
   width: 8px;
   height: 100px;
   margin: 5px;
   border-radius: 10px;  
   background-color: #A238FF;
   box-shadow: 0 0 20px #A238FF;
   animation: beat 1.5s linear infinite;
}
 @keyframes beat {
   0% {
      transform: scale(0.2);

   }
   50% {
      transform: scale(1);
   }

   100% {
      transform: scale(0.5);
   }
 }
   /* I used the nth child selection to target specific bars to have the perfect sound wave animation with varying 
   animation delay time. */
.sound-wave .bar:nth-child(1) {
   animation-delay: 0.2s;
}
.sound-wave .bar:nth-child(2) {
   animation-delay: 0.4s;
}
.sound-wave .bar:nth-child(3) {
   animation-delay: 0.5s;
}
.sound-wave .bar:nth-child(4) {
   animation-delay: 0.6s;
}
.sound-wave .bar:nth-child(5) {
   animation-delay: 0.5s;
}
.sound-wave .bar:nth-child(6) {
   animation-delay: 0.4s;
}
.sound-wave .bar:nth-child(12) {
   animation-delay: 0.2s;
}
.sound-wave .bar:nth-child(13) {
   animation-delay: 0.5s;
}
.sound-wave .bar:nth-child(14) {
   animation-delay: 0.6s;
}
.sound-wave .bar:nth-child(15) {
   animation-delay: 0.5s;
}
.sound-wave .bar:nth-child(16) {
   animation-delay: 0.4s;
}
.sound-wave .bar:nth-child(17) {
   animation-delay: 0.2s;
}
.sound-wave .bar:nth-child(23) {
   animation-delay: 0.2s;
}
.sound-wave .bar:nth-child(24) {
   animation-delay: 0.4s;
}
.sound-wave .bar:nth-child(25) {
   animation-delay: 0.5s;
}
.sound-wave .bar:nth-child(26) {
   animation-delay: 0.6s;
}
.sound-wave .bar:nth-child(27) {
   animation-delay: 0.5s;
}
.sound-wave .bar:nth-child(28) {
   animation-delay: 0.4s;
}
.sound-wave .bar:nth-child(29) {
   animation-delay: 0.2s;
}
.sound-wave .bar:nth-child(36) {
   animation-delay: 0.2s;
}
.sound-wave .bar:nth-child(37) {
   animation-delay: 0.4s;
}
.sound-wave .bar:nth-child(38) {
   animation-delay: 0.5s;
}
.sound-wave .bar:nth-child(39) {
   animation-delay: 0.6s;
}
.sound-wave .bar:nth-child(40) {
   animation-delay: 0.5s;
}
.sound-wave .bar:nth-child(41) {
   animation-delay: 0.4s;
}
.sound-wave .bar:nth-child(42) {
   animation-delay: 0.2s;
}
.sound-wave .bar:nth-child(48) {
   animation-delay: 0.2s;
}
.sound-wave .bar:nth-child(49) {
   animation-delay: 0.4s;
}
.sound-wave .bar:nth-child(50) {
   animation-delay: 0.5s;
}
.sound-wave .bar:nth-child(51) {
   animation-delay: 0.6s;
}
.sound-wave .bar:nth-child(52) {
   animation-delay: 0.5s;
}
.sound-wave .bar:nth-child(53) {
   animation-delay: 0.4s;
}
.sound-wave .bar:nth-child(54) {
   animation-delay: 0.2s;
}
.sound-wave .bar:nth-child(61) {
   animation-delay: 0.2s;
}
.sound-wave .bar:nth-child(62) {
   animation-delay: 0.4s;
}
.sound-wave .bar:nth-child(62) {
   animation-delay: 0.5s;
}
.sound-wave .bar:nth-child(62) {
   animation-delay: 0.6s;
}
.sound-wave .bar:nth-child(64) {
   animation-delay: 0.5s;
}
.sound-wave .bar:nth-child(65) {
   animation-delay: 0.4s;
}
.sound-wave .bar:nth-child(66) {
   animation-delay: 0.2s;
}
/* I used media query to set the width of the soundwave bars for bigger screens because they weren't showing on big screens */
@media only screen and (max-width: 1920px) {
   .sound-wave .bar {
       width: 100%;
       height: 200px;
   }
}

/* Brenda's section: Plans CSS */
h2 {
   color: white;
   font-family: Arial, Helvetica, sans-serif;
   padding: 10px;
}
.cards {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   margin-top: 20px;
   color:black;
   font-family:Verdana, Geneva, Tahoma, sans-serif;
   font-size: 14px;
   width: auto;
}

.card {
   
   border-radius:8px;
   margin: 10px;
   padding:20px;
   text-align: center;
   width: auto;
   height: 318px;
   flex-direction:row;
   justify-content:center;
   align-items:center;
   position: relative;
}

.card.premium,
.card.family,
.card.fam-and-pre {
   background-color:#FFFFFF;
   flex-direction:row;
   justify-content:center;
   text-align: left;
}
.btn.premium {
   display: flex;
   background-color: #a238ff;
   width: 132px;
   height: 44px;
   font-family:Verdana, Geneva, Tahoma, sans-serif;
   text-align: center;
   font-size: 20px;
   font-weight: bold;
   color: #FFFFFF;
   border-radius:20px;
   border:2px solid #a238ff;
   align-items: center;
}
.btn.family {
   display: flex;
   background-color: #FF673D;
   width: 112px;
   height: 44px;
   border-radius:20px;
   border:2px solid #FF673D;
   font-family:Verdana, Geneva, Tahoma, sans-serif;
   text-align: center;
   font-size:20px;
   font-weight: bold;
   color: #FFFFFF;
   align-items:center;
   
}
.btn.fam-and-pre{
   display: flex;
   background-color: #a238ff;
   width: 116px;
   height: 44px;
   border-radius:10px;
   font-family: Verdana, Geneva, Tahoma, sans-serif;
   text-align: center;
   font-size: 20px;
   font-weight: bold;
   color: #FFFFFF;
   padding: 5px;
   border-radius:20px;
   border: 2px solid #a238ff;
   align-items: center;

}
.btn-try1{
   padding: 16px 32px;
   background: #121216;
   margin: 0 0 16px;
   color: #FFFFFF;
   font-family:Verdana, Geneva, Tahoma, sans-serif;
   font-size: 14px;
   width: 350px;
   height: 54px;
   border-radius:8px;
}
.btn-try2 {
   padding: 16px 32px;
   background: #121216;
   margin: 0 0 16px;
   color: #FFFFFF;
   font-family:Verdana, Geneva, Tahoma, sans-serif;
   font-size: 14px;
   width: 350px;
   height: 54px;
   border-radius:8px;
}

.btn-try3{
   padding: 16px 32px;
   background: #121216;
   margin: 0 0 16px;
   color: #FFFFFF;
   font-family:Verdana, Geneva, Tahoma, sans-serif;
   font-size: 14px;
   width: 350px;
   height: 54px;
   border-radius:8px;
   margin-top:13px;
}
.arial-font {
   font-family: Verdana, Geneva, Tahoma, sans-serif;
   font-size: 12px;
   align-self: flex-end;
   margin-top: auto;
   text-align: left;
   
}
.month{
   display: flex;;
   margin-right: auto;
}

/* Monica's CSS code */
.container{
   width: auto;
   display: grid;
   grid-template-columns: repeat(4, 1fr);
   gap: 10px;
   margin-left: 15px;
}
.card-s{
   width: 300px; 
   background-color: white;
   color: black;
   font-size: 14px;
   font-family:Verdana, Geneva, Tahoma, sans-serif;
   border-radius: 10px;
   display: inline-block;
   overflow: hidden;
   height: auto;
   font-weight: 200;
   margin: 20px 10px;
   
}
.card-s:hover {
background-color: gray;  
color: white; 
cursor: pointer;
transition: transform 2s ease-in;
}
.image img{
height:300px;
width:300px;
margin: 0px;
border-radius: 15px;
}

.title {  
   text-align: left;
   padding-left: 10px;
}

.des{
   padding-left:10px;
   font-size: 14px;
}
@media screen and (max-width: 1920px){
   .container{
   display: grid;
   grid-template-columns: repeat (4, 1fr);
   justify-content: space-around;

}
}
.background {
   background-color: #A238FF;
   width: auto;
}

